Aligned text correctly

--- a/src/components/OurMission/OurMission.module.css
+++ b/src/components/OurMission/OurMission.module.css
@@ -82,9 +82,7 @@
   }
 
   .text {
-    text-align: right;
     font-size: 1.25rem;
-    text-align: center;
   }
 
   .seperator {
