--- a/src/components/WhoWeAre/WhoWeAre.module.css
+++ b/src/components/WhoWeAre/WhoWeAre.module.css
@@ -32,7 +32,7 @@
 .text {
   opacity: 0;
   line-height: 1.5;
-  text-align: right;
+  text-align: left;
   font-size: 1.35rem;
   transition: 0.3s ease-in;
   color: var(--text-secondary);
@@ -91,9 +91,7 @@
   }
 
   .text {
-    text-align: left;
     font-size: 1.25rem;
-    text-align: center;
   }
 }
 
